Fix Agenda Spacing: Add negative top margin to page content

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -553,14 +553,8 @@ video {
 .sticky {
   position: sticky;
 }
-.bottom-4 {
-  bottom: 1rem;
-}
 .end-0 {
   inset-inline-end: 0px;
-}
-.left-0 {
-  left: 0px;
 }
 .right-0 {
   right: 0px;
@@ -576,9 +570,6 @@ video {
 }
 .isolate {
   isolation: isolate;
-}
-.z-10 {
-  z-index: 10;
 }
 .m-0 {
   margin: 0px;
@@ -1026,10 +1017,6 @@ video {
 .bg-rose-50 {
   --tw-bg-opacity: 1;
   background-color: rgb(255 241 242 / var(--tw-bg-opacity, 1));
-}
-.bg-rose-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(244 63 94 / var(--tw-bg-opacity, 1));
 }
 .bg-rose-500\/10 {
   background-color: rgb(244 63 94 / 0.1);
@@ -1495,16 +1482,8 @@ video {
   --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
-.shadow-rose-900\/20 {
-  --tw-shadow-color: rgb(136 19 55 / 0.2);
-  --tw-shadow: var(--tw-shadow-colored);
-}
 .shadow-teal-500\/20 {
   --tw-shadow-color: rgb(20 184 166 / 0.2);
-  --tw-shadow: var(--tw-shadow-colored);
-}
-.shadow-teal-900\/20 {
-  --tw-shadow-color: rgb(19 78 74 / 0.2);
   --tw-shadow: var(--tw-shadow-colored);
 }
 .outline {
@@ -1728,11 +1707,6 @@ table tr td div.btn-group button.btn, table tr td div.btn-group a.btn, table tr 
   background-color: rgb(239 68 68 / 0.1);
 }
 
-.hover\:bg-rose-600:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(225 29 72 / var(--tw-bg-opacity, 1));
-}
-
 .hover\:bg-sky-100:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(224 242 254 / var(--tw-bg-opacity, 1));
@@ -1827,12 +1801,6 @@ table tr td div.btn-group button.btn, table tr td div.btn-group a.btn, table tr 
 .focus\:ring-teal-500:focus {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(20 184 166 / var(--tw-ring-opacity, 1));
-}
-
-.active\:scale-95:active {
-  --tw-scale-x: .95;
-  --tw-scale-y: .95;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .group\/btn:hover .group-hover\/btn\:scale-110 {
